--- a/Alert/AndroidManifest.xml
+++ b/Alert/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.alert"
+    package="com.bhochhi.news"
     android:versionCode="1"
     android:versionName="1.0" >
 
