--- a/todos/AndroidManifest.xml
+++ b/todos/AndroidManifest.xml
@@ -12,15 +12,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".TodoOverviewActivity"
-            android:label="@string/app_name" >
+            android:name=".TodosOverviewActivity"
+            android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>      
-      
+        </activity>
     </application>
 
 </manifest>
